# Labs_OOP

./: .gitignore
Labs/Lab2/: Lab2.sln
Labs/Lab3/: Lab3.sln
Labs/Lab4/: Lab4.sln
Labs/Lab5/: Lab5.sln  myfile_test
Labs/Lab6/: Copies\file_lab6  Lab6.sln
Matematical_modeling/: 1_lab_mat_model.ipynb
Project_C++/: promt.txt  Пометки по решению.txt
Project_C++/1_Lab/: add_new_student_7_lab.h  cout_student_7_lab.h  main  student.h  student_direction_7_lab.h  student_group_7_lab.h  student_in_7_lab.h  test.cpp
Project_C++/1_Lab_final/: add_new_student.h  baze_data.h  cout_student.h  date.h  dfjk.txt  dialog_func.h  find_oldest_student.h  find_younger_student.h  fio.h  main  main.cpp  read_of_file.h  student_group.h  students_direction.h  students_in.h  test_file.txt  write_file.h
Project_C++/2_Lab/: 2_lab_main.cpp  Lab_2_file.txt  Student.h  add_new_student.h  baze_data.h  dialog_func.h  example_class.cpp  find_student.h  main  read_of_file.h  student_grup.h  test_file.txt  (+2 more)
Project_C++/6_Lab/: CMakeLists.txt  main  test.cpp  Требования.txt
Project_C++/6_Lab/include/: Error.h  function.h  stdfax.h  student.h  teacher.h
Project_C++/6_Lab/src/classes/: student.cpp
Project_C++/6_Lab/src/utils/: exceptions.cpp  find_people.cpp  find_stud_num_grup.cpp  find_stud_to_grup.cpp  read_of_file.cpp  sort_fam.cpp
Project_C++/6_Lab/ыва/: aa.ipynb  c++_helpful_information.ipynb  test.md
МОЦОС/: МОЦОС_Lab_2 (2) (1) (2) (2).ipynb
Нелинейные задачи/: lab2_chisl2.ipynb
УМФ/: copy.ipynb
Ч_УМФ/:  lab_1.ipynb  CM_UMF_lab_2.ipynb  lab_2.ipynb  ааааа.ipynb
(+271 files in other folders)
